<resources>
    <string name="app_name">K234111E_nguyenmaithaolinh</string>
    <string name="str_welcome">Welcome to K234111E</string>
    <string name="str_clickme">Click Me!</string>
    <string name="str_login_title">Login System</string>
    <string name="str_username">User Name</string>
    <string name="str_hint_username">Enter your username</string>
    <string name="str_password">Password</string>
    <string name="str_hint_password">Enter your password</string>
    <string name="str_login">Login</string>
    <string name="str_exit">Exit</string>
    <string name="str_login_success">Login successful !!!</string>
    <string name="str_login_failed">Login failed !!!</string>
    <string name="str_mc">MC</string>
    <string name="str_mr">MR</string>
    <string name="str_m_plus">M+</string>
    <string name="str_m_minus">M-</string>
    <string name="str_ms">MS</string>
    <string name="str_m">M</string>
    <string name="str_open_calculator">Open Calculator App</string>
    <string name="str_hint_calc">0</string>
    <string name="str_percent">%</string>
    <string name="str_ce">CE</string>
    <string name="str_c">C</string>
    <string name="str_backspace">&lt;==</string>
    <string name="str_1x">1/x</string>
    <string name="str_square">x^2</string>
    <string name="str_sqrt">sqrt(x)</string>
    <string name="str_divide">:</string>
    <string name="str_multiply">X</string>
    <string name="str_minus">-</string>
    <string name="str_plus">+</string>
    <string name="str_inverse">+/-</string>
    <string name="str_dot">.</string>
    <string name="str_calculate">=</string>
    <string name="str_0">0</string>
    <string name="str_1">1</string>
    <string name="str_2">2</string>
    <string name="str_3">3</string>
    <string name="str_4">4</string>
    <string name="str_5">5</string>
    <string name="str_6">6</string>
    <string name="str_7">7</string>
    <string name="str_8">8</string>
    <string name="str_9">9</string>
    <string name="str_login_role">Login Role</string>
    <string name="str_login_admin">Admin</string>
    <string name="str_login_employee">Employee</string>
    <string name="str_signin_continue">Please sign in to continue</string>
    <string name="str_remember_me">Remember Me</string>
    <string name="str_forgot_password">Forgot Password?</string>
    <string name="str_default_admin">admin</string>
    <string name="str_default_pwd">123</string>
</resources>